--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.8",
+    "yet-another-react-lightbox": "^3.12.2"
   }
 }
